<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_tickets" />
        <item
            android:id="@+id/nav_categorias"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_categorias" />
        <item
            android:id="@+id/nav_profesor"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_profesor" />
        <item
            android:id="@+id/nav_contactos"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_contactos" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_developer"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_developer" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
