<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionbar_list"
        android:orderInCategory="1"
        android:title="@string/actionbar_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionbar_tile"
        android:title="@string/actionbar_tile"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionbar_card"
        android:title="@string/actionbar_card"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
